chg mod url dynamic iframe height add z-index to metadata panel to avoid video ui mischief

--- a/theme/default/css/dynamic.css
+++ b/theme/default/css/dynamic.css
@@ -31,6 +31,7 @@
 	-moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
 	box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
 	background-color: #eee;
+	z-index: 99;
 }
 .edusharing_rendering_metadata_header {
 	background-color: #eee;
